# noisegate-plugin

./: .gitignore  CMakeLists.txt  README.md  agent.md  contributing.md
src/: plugin-editor.cpp  plugin-editor.h  plugin-processor.cpp  plugin-processor.h
